# permaplan

./: CMakeLists.txt  CodeSizeHistory.xlsx  Doxyfile  Makefile  README.md  co2-scenarios.json  compilePermaserv  compilePmod  iTreeConvert.pl  imgui.ini  junk.cpp  junk.txt  logControl.pl  measCode.pl  newClass.pl  openGlFinder.pl  openSrc  pmod  pmod-0.0.1  pmod-0.0.2  rfc5646-language-tags.json  temp-factors-berkeley.xlsx  temp-factors-davis.xlsx  temp-factors-ithaca.xlsx  temp-factors-state-college.xlsx  testSupport.pl  treeEquation.pl  unixTime.cpp
812/: 812.json  812.oldf
Materials/: manifest.json  maniserv.json
css/: permaplan.css
docs/: open-landscape-description-format.md  open-tree-description-language.md
include/: .h  Arrow.h  AxialElement.h  BILFile.h  BezierPatch.h  BioClass.h  Boundary.h  BoundingBox.h  Box.h  Building.h  BuildingAssembly.h  BuildingRect.h  BuildingWindow.h  CO2Scenario.h  Camera.h  CircleIterator.h  ClimateDatabase.h  ClimateDatabaseClient.h  ClimateInfo.h  ColoredAxes.h  ControlGroup.h  Copse.h  CryptoAlgorithms.h  Cylinder.h  D3Graph.h  DisplayList.h  DynamicallyTypable.h  ElementBufferCombo.h  ElementBufferObject.h  EmptyClass.h  ExtensionMimeTypeMap.h  Family.h  GHCNDatabase.h  GLFWApplication.h  Gable.h  GdalFileInterface.h  Genus.h  Global.h  GlobalMacros.h  Grid.h  (+108 more)
permaserv/: Makefile  permaserv_main.cpp
scripts/: checkUserPass.js  graphs.js
src/: .cpp  Arrow.cpp  AxialElement.cpp  BILFile.cpp  BezierPatch.cpp  BioClass.cpp  Boundary.cpp  BoundingBox.cpp  Box.cpp  Building.cpp  BuildingAssembly.cpp  BuildingRect.cpp  (+136 more)
(+51 files in other folders)
